Перевод ru/index.html

--- a/manual/ru/index.html
+++ b/manual/ru/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Verge3D User Manual - Soft8Soft</title>
-    <meta content="The official User Manual on Verge3D for Blender, 3ds Max and Maya." name="description">
+    <title>Руководство пользователя Verge3D - Soft8Soft</title>
+    <meta content="Официальная документация по Verge3D для Blender, 3ds Max и Maya." name="description">
 
     <base href="../../" />
     <script src="list.js"></script>
@@ -12,10 +12,10 @@
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body>
-    <h1>Welcome to Verge3D User Manual!</h1>
+    <h1>Добро пожаловать в Руководство пользователя Verge3D!</h1>
 
     <p>
-    Select a topic from the left. If you don't know where to start - proceed straight to the <a href="manual/ru/introduction/Beginners-Guide.html">Beginner's Guide</a>. If you're looking for Developer API reference, check out <a href="api/en/index.html">this page</a>.
+    Выберите рубрику слева. Если вы не знаете с чего начать, то откройте <a href="manual/ru/introduction/Beginners-Guide.html">Руководство для начинающих</a>. Если вы ищите информацию об API Verge 3D, то переходите на <a href="api/en/index.html">эту страницу</a>.
     </p>
 
     <p>
