--- a/manual/ru/introduction/Beginners-Guide.html
+++ b/manual/ru/introduction/Beginners-Guide.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D Beginner's Guide - Soft8Soft</title>
+    <title>Руководство для начинающих по Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Get started with Verge3D and learn how to create interactive 3D web experiences from scratch. This guide covers using the app manager, setting up Blender, 3ds Max or Maya for effective graphics authoring, using the Puzzles environment to create interactive WebGL content without coding and publishing it with Verge3D Network."/>
+    <meta name="description" content="Начните работать с Verge3D и узнайте, как создавать интерактивные трехмерные веб-приложения с нуля. В этом руководстве рассматривается использование менеджера приложений, настройка Blender, 3ds Max или Maya для эффективного создания графики, использование среды Puzzles для создания интерактивного содержимого WebGL без кодирования и дальнейшей публикации его в Verge3D Network."/>
     <base href="../../../" />
     <script src="list.js"></script>
     <script src="page.js"></script>
@@ -11,26 +11,26 @@
   </head>
   <body><article>
 
-    <h1>Beginner's Guide</h1>
+    <h1>Руководство для начинающих</h1>
 
     <p>
-    Verge3D is a versatile piece of software which you can utilize differently depending on your personal preferences. This guide describes just one of possible ways of how you can build your workflow, so take it as a friendly recommendation. The only prerequisite is that you should have some experience with 3D editing software on top of which Verge3D works: Blender, Autodesk 3ds Max or Maya.
+      Verge3D - это универсальное программное обеспечение, которое вы можете использовать по-разному, в зависимости от ваших предпочтений. В этом руководстве описан только один из возможных способов построения рабочего процесса. Рассматривайте его как дружескую рекомендацию. Единственным условием является то, что вы должны иметь опыт работы с программным обеспечением для редактирования 3D, поверх которого работает Verge3D: Blender, Autodesk 3ds Max или Maya.
     </p>
 
     <div class="package-logos">
 
       <a class="package-logo" href="manual/ru/blender/Beginners-Guide.html">
         <img src=files/beginner_guide/blender-logo.png>
-        <div>Verge3D for Blender<br>Beginner's Guide</div>
+        <div>Verge3D для Blender<br>Руководство для начинающих</div>
       </a>
 
       <a class="package-logo" href="manual/ru/max/Beginners-Guide.html">
         <img src=files/beginner_guide/max-logo.png>
-        <div>Verge3D for 3ds Max<br>Beginner's Guide</div>
+        <div>Verge3D для 3ds Max<br>Руководство для начинающих</div>
       </a>
       <a class="package-logo" href="manual/ru/maya/Beginners-Guide.html">
-        <img src=files/beginner_guide/maya-logo.png>
-        <div>Verge3D for Maya<br>Beginner's Guide</div>
+        <img  src=files/beginner_guide/maya-logo.png>
+        <div>Verge3D для Maya<br>Руководство для начинающих</div>
       </a>
 
     </div>
