Перевод ru/introduction/App-Manager

--- a/manual/ru/introduction/App-Manager.html
+++ b/manual/ru/introduction/App-Manager.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>App Manager - Soft8Soft</title>
+    <title>App Manager (менеджер проектов) - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how you can use Verge3D App Manager."/>
+    <meta name="description" content="Как использовать App Manager (менеджер проектов)"/>
     <base href="../../../" />
     <script src="list.js"></script>
     <script src="page.js"></script>
@@ -11,67 +11,65 @@
   </head>
   <body><article>
 
-    <h1>App Manager</h1>
+    <h1>App Manager (менеджер проектов)</h1>
 
-    <p>App Manager is an easy-to-use tool for creating and performing various operations with Verge3D applications.</p>
+    <p>App Manager предназначен для создания и выполнения различных операций с приложениями Verge3D.</p>
 
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:Running_App_Manager]
 
-    <h2>Running App Manager</h2>
+    <h2>Запуск App Manager</h2>
 
     <p>
-    The App Manager is implemented as web pages shown by the locally-run web server, similar to WiFi router admin panel.
+      App Manager — это классический сайт, отображаемый локальным веб-сервером, наподобие панели настроек WiFi роутера.
     </p>
 
     <img src="files/app-manager/app-manager-main.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    By default, the pages are served from the address <a href="http://localhost:8668/" target="_blank">localhost:8668</a>, which you can navigate to, refresh or bookmark. The server can be launched in several ways (see below).
+      Доступ осуществляется по адресу <a href="http://localhost:8668/" target="_blank">localhost:8668</a>. Вы можете переходить со страницу на страницу, обновлять их или добавлять в закладки. Сам сервер запускается несколькими способами (см. ниже).
     </p>
-
-
 
     [anchor:From_Blender_Max_Maya]
 
-    <h3>A. From Blender, 3ds Max or Maya</h3>
+    <h3>Вариант 1. Прямой доступ из Blender, 3ds Max или Maya</h3>
 
-    <p>The local web server is started automatically when you launch your 3D tool with Verge3D plug-in installed. Upon clicking on the App Manager button (Blender) or menu option (Max, Maya), the App Manager page is shown in the web browser.</p>
+    <p>При старте вашего 3D редактора происходит автоматический запуск локального веб-сервера, если, конечно, установлен плагин Verge3D. Щелкните по кнопке App Manager для Blender или выберите соответствующий пункт меню для других редакторов. Это действие откроет App Manager в веб-браузере по умолчанию.</p>
 
     <img src="files/beginner_guide/app-manager-blender.jpg" class="centered" style="max-width: 951px">
     <img src="files/beginner_guide/app-manager-max.jpg" class="centered" style="max-width: 951px">
 
     <p>
-    If the web server happens to be down for some reason (e.g. you closed the first launched instance of your 3D editor), this operator also restarts it.
+      В случае неработоспособности веб-сервера (такое может случится, например, если вы закроете первый запущенный экземпляр 3D-редактора) данная функция его перезагрузит.
     </p>
 
 
 
     [anchor:Using_Desktop_Application]
 
-    <h3>B. Using Desktop Application</h3>
+    <h3>Вариант 2. Использование классического приложения</h3>
 
-    <p>The local web server can be launched even without Blender, 3ds Max or Maya. Simply click on the desktop icon created by the Verge3D installer (Windows-only). The App Manager page will be immediately shown in the web browser.</p>
+    <p>Локальный веб-сервер можно запустить без Blender, 3ds Max или Maya. Просто щелкните значок на рабочем столе, созданный установщиком Verge3D (только для Windows). Страница App Manager откроется в веб-браузере.</p>
 
     <img src="files/app-manager/app-manager-desktop-icon.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    If the web server is already running (e.g. you launched it from the 3D editor), this desktop application just opens the App Manager in the browser.
+      Если веб-сервер уже запущен (например из 3D-редактора), данное приложение просто откроет App Manager в браузере.
     </p>
 
 
 
     [anchor:In_Command_Line]
 
-    <h3>C. In Command-Line</h3>
+    <h3>Вариант 3. Работа с командной строкой</h3>
 
     <p>
-    Install Python 3, e.g. from <a href="https://www.microsoft.com/en-us/p/python-38/9mssztt1n39l" target="_blank">Microsoft Store</a>. Once you have Python 3 installed, launch *Command Prompt* and type:
+      Установите Python 3, например из <a href="https://www.microsoft.com/en-us/p/python-38/9mssztt1n39l" target="_blank">Microsoft Store</a>. Затем запустите * Command Prompt * и введите:
     </p>
 
     <code>
@@ -79,7 +77,7 @@
     </code>
 
     <p>
-    (or whatever path you installed Verge3D in), and then for Blender version type:
+      (укажите корректный путь к директории, где установлен Verge3D). Для версии Blender введите:
     </p>
 
     <code>
@@ -87,7 +85,7 @@
     </code>
 
     <p>
-    for Max version type:
+    для Max:
     </p>
 
     <code>
@@ -95,7 +93,7 @@
     </code>
 
     <p>
-    or for Maya:
+    для Maya:
     </p>
 
     <code>
@@ -103,39 +101,39 @@
     </code>
 
     <p>
-    Finally, open up the browser and navigate to <a href="http://localhost:8668/" target="_blank">localhost:8668</a> as usual. Users of maxOS or Linux can use the same commands, only with forward slashes.
+      Откройте веб-браузер и перейдите по адресу <a href="http://localhost:8668/" target="_blank">localhost:8668</a>. Пользователи macOS или Linux могут использовать одни и те же команды, но только с обратным слэшем (/).
     </p>
 
 
 
     [anchor:Exploring_Applications]
 
-    <h2>Exploring Applications</h2>
+    <h2>Страница приложений</h2>
 
 
 
     [anchor:List_Main_Page]
 
-    <h3>List on the Main Page</h3>
+    <h3>Список на главной странице</h3>
 
     <p>
-    Upon starting or refreshing the main page, the App Manager scans the folder *applications* in the installation directory, and displays all found folders as a list. If *External applications directory* is specified in App Manager settings, the folders from inside that directory are also appended to the bottom of the list.
+      После запуска или обновления главной страницы, App Manager сканирует директорию *applications* и отображает все найденные проекты в виде списка. Если в настройках программы указан *External applications directory* (внешний каталог приложений), то папки из него добавляются в конец списка.
     </p>
 
     <p>
-    For each application in the list, the App Manager displays all .html, .gltf/.glb and 3D editor save files (.blend, .max, .ma/.mb) found in an application folder. These files can be viewed by clicking on their icons.
+      Для каждого приложения из списка App Manager демонстрирует все html, gltf/glb файлы, а также проекты 3D редакторов. Эти файлы можно просмотреть, щелкнув по нужной иконке.
     </p>
 
     <img src="files/app-manager/app-manager-list-files.jpg" class="centered" style="max-width: 800px">
 
     <p>
-    Application lines which contain too many files are expandable through the triangle icon near app name.
+      Если приложение содержит большое количество файлов, то они скрываются для удобства просмотра. Щелкните по иконке треугольника, рядом с названием приложения, и вы получите полный доступ.
     </p>
 
     <img src="files/app-manager/app-manager-list-files-expand.jpg" class="centered" style="max-width: 800px">
 
     <p>
-    Applications can be filtered using the search field on the top.
+      Используйте строку поиска для фильтрации приложений.
     </p>
 
     <img src="files/app-manager/app-manager-search.jpg" class="centered" style="max-width: 800px">
@@ -144,16 +142,16 @@
 
     [anchor:Application_Page]
 
-    <h3>Application Page</h3>
+    <h3>Страница приложения</h3>
 
     <p>
-    By clicking on the application name, a more elaborate page is shown.
+      Кликните по названию приложения, чтобы перейти на его страницу.
     </p>
 
     <img src="files/app-manager/app-manager-list-app-link.jpg" class="centered" style="max-width: 800px">
 
     <p>
-    On the application page, all files are listed with their names, also runnable. The files on this page are filterable via the search input.
+      Здесь перечислены все файлы, которые доступны для запуска. Вы также можете фильтровать приложения, используя строку поиска.
     </p>
 
     <img src="files/app-manager/app-manager-app-page.jpg" class="centered" style="max-width: 1000px">
@@ -162,150 +160,150 @@
 
     [anchor:Creating_Applications]
 
-    <h2>Creating Applications</h2>
+    <h2>Создание приложения</h2>
 
     <p>
-    A new application can be created using the button on the left bar.
+      Новое приложение создается с помощью кнопки на левой панели.
     </p>
 
     <img src="files/app-manager/app-manager-create.jpg" class="centered" style="max-width: 569px">
 
     <p>
-    You may type a name for the new application, and select a template from which the app will be created. By default, 3 templates are offered: Standard Light/Dark and Code-Based. More templates can be added for choosing from.
+      Введите имя для нового приложения и выберите шаблон. По умолчанию предлагается 3 варианта: стандартный светлый или темный, а также на основе кода. Шаблоны могут быть добавлены самостоятельно в специальных настройках.
     </p>
 
     <img src="files/app-manager/app-manager-create-options.jpg" class="centered" style="max-width: 522px">
 
     <p>
-    You can also include optional modules in the application to enable Internet Explorer 11 support, add compatibility with the legacy WebVR API, or include the physics engine in the application.
+      Вы также можете добавить дополнительные модули в приложение, чтобы активировать поддержку Internet Explorer 11, обеспечить совместимость с API WebVR или включить физический движок.
     </p>
 
     <p>
-    Once a new application is created, there will be shown a link which you may use to go to the application page (or you may just close it).
+      После завершения генерации, будет показана ссылка на новое приложение.
     </p>
 
     <img src="files/app-manager/app-manager-created.jpg" class="centered" style="max-width: 800px">
 
     <p>
-    The new app will start being displayed in the main list.
+    Созданное приложение появится в общем списке.
     </p>
 
 
 
     [anchor:Operations]
 
-    <h2>Operations</h2>
+    <h2>Функции</h2>
 
 
 
     [anchor:Edit_Puzzles]
 
-    <h3>Edit Puzzles</h3>
+    <h3>Редактор пазлов</h3>
 
     <p>
-    You can start adding or editing Puzzles for an application by clicking the button in the 'operations' column on the main page:
+      Вы можете начать работу с пазлами, нажав соответствующую кнопку на этой панели в главном окне:
     </p>
 
     <img src="files/app-manager/app-manager-run-puzzles-from-main.jpg" class="centered" style="max-width: 800px">
 
     <p>
-    ... or by using the button on the right bar when on the application page:
+      ...или на панели справа в окне приложения.
     </p>
 
     <img src="files/app-manager/app-manager-run-puzzles-from-app-page.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    See more information on Puzzles <a href="manual/ru/introduction/Puzzles-Visual-Logic-Editor.html">here</a>.
+    Больше информации по пазлам найдете <a href="manual/ru/introduction/Puzzles-Visual-Logic-Editor.html">здесь</a>.
     </p>
 
 
 
     [anchor:Open_Folder]
 
-    <h3>Open Folder</h3>
+    <h3>Открытие папки</h3>
 
     <p>
-    You can open the application folder by clicking the button in the 'operations' column on the main page:
+      Для открытии папки приложения, щелкните по этой кнопке:
     </p>
 
     <img src="files/app-manager/app-manager-open-folder-from-main.jpg" class="centered" style="max-width: 800px">
 
     <p>
-    ... or by using the button on the right bar when on the application page:
+    ... или же используйте ее дубликат на панели справа в окне приложения.
     </p>
 
     <img src="files/app-manager/app-manager-open-folder-from-app-page.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    This operation will invoke the default file manager of your operating system (e.g. File Explorer on Windows 10).
+      Эта операция вызовет файловый менеджер, который установлен в системе по умолчанию (для Windows - классический проводник).
     </p>
 
 
 
     [anchor:Publish]
 
-    <h3>Publish</h3>
+    <h3>Публикация</h3>
 
     <p>
-    You can publish an application by clicking the button in the 'operations' column on the main page:
+    Вы можете опубликовать приложение, щелкнув по нужной кнопке в главном окне:
     </p>
 
     <img src="files/app-manager/app-manager-publish-from-main.jpg" class="centered" style="max-width: 800px">
 
     <p>
-    ... or by using the button on the right bar when on the application page:
+    ...или по ее аналогу на правой панели в окне приложения.
     </p>
 
     <img src="files/app-manager/app-manager-publish-from-app-page.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    This operation will start uploading the application to Verge3D Network (operation cancellable), so that it becomes available online.
+      Начнется загрузка приложения в Verge3D Network. Это позволит получить к нему доступ онлайн (действие может быть отменено).
     </p>
 
     <img src="files/app-manager/app-manager-publish-cancel.jpg" class="centered" style="max-width: 300px">
 
     <p class="note">
-    If uploading fails with the message "The difference between your local system time and the server time is too large", then you should correct time on your computer and try again.
+      Если загрузка файлов прекратилась с выводом сообщения «The difference between your local system time and the server time is too large», то установите корректное время на своем компьютере и попробуйте снова.
     </p>
 
     <p>
-    After uploading is complete, a window will be shown from which you can copy the link to your app or the embedding code.
+      После завершения загрузки будет показано окно с прямой ссылкой на приложение, а также код для встраивания в уже имеющиеся страницы.
     </p>
 
     <img src="files/app-manager/app-manager-publish-complete.jpg" class="centered" style="max-width: 642px">
 
     <p>
-    You can also use social sharing buttons and QR code generator there.
+      Вы также можете использовать кнопки социальных сетей и генератор QR-кода.
     </p>
 
     <img src="files/app-manager/app-manager-publish-qrcode.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    Uploaded files can be inspected or removed on the Network Directory page.
+      Загруженные файлы можно просмотреть или удалить на странице Network Directory.
     </p>
 
 
 
     [anchor:Upload_Archive]
 
-    <h3>Upload Archive</h3>
+    <h3>Загрузка архива</h3>
 
     <p>
-    You can upload the zip archive of an application folder by using the button on the right bar when on the application page:
+      Вы можете загрузить приложение в виде архива zip, используя кнопку на правой панели на странице приложения.
     </p>
 
     <img src="files/app-manager/app-manager-upload-archive-from-app-page.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    This operation will zip your application folder and will upload the archive to Verge3D Network (operation cancellable), so that it becomes available for sharing with your co-workers, clients or Verge3D developers.
+      Программа сожмет ваши файлы и загрузит архив в Verge3D Network (операция может быть отменена). Используйте эту возможность для передачи контента вашим коллегам, клиентам или другим разработчикам Verge3D.
     </p>
 
     <p class="note">
-    If uploading fails with the message "The difference between your local system time and the server time is too large", then you should correct time on your computer and try again.
+      Если загрузка файлов прекратилась с выводом сообщения «The difference between your local system time and the server time is too large», то установите корректное время на своем компьютере и попробуйте снова.
     </p>
 
     <p>
-    After uploading is complete, a window will be shown from which you can copy the link to the zip archive.
+      После завершения загрузки откроется окно со ссылкой на zip-архив.
     </p>
 
     <!--
@@ -314,58 +312,58 @@
     -->
 
     <p>
-    Uploaded files can be inspected or removed on the Network Directory page.
+    Загруженные файлы также могут быть просмотрены и удалены в окне Verge3D Network.
     </p>
 
 
 
     [anchor:Update]
 
-    <h3>Update</h3>
+    <h3>Обновление</h3>
 
     <p>
-    If an application is based on an older version of Verge3D, a button for updating it becomes active in the 'operations' column on the main page:
+      Если приложение использует старую версию Verge3D, то станет доступна специальная кнопка для обновления.
     </p>
 
     <img src="files/app-manager/app-manager-update-from-main.jpg" class="centered" style="max-width: 800px">
 
     <p>
-    The button will also appear on the right bar of the application page:
+    Аналогичная кнопка также появится на странице приложения.
     </p>
 
     <img src="files/app-manager/app-manager-update-from-app-page.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    See more information on updating <a href="manual/ru/introduction/Updating.html">here</a>.
+    Больше информации по обновлению вы найдете <a href="manual/ru/introduction/Updating.html">здесь</a>.
     </p>
 
 
 
     [anchor:Move_to_Trash]
 
-    <h3>Move to Trash</h3>
+    <h3>Удаление в Корзину</h3>
 
     <p>
-    You can delete an application by clicking the button in the 'operations' column on the main page:
+    Вы можете удалить приложение, кликнув по этой кнопке на главной странице:
     </p>
 
     <img src="files/app-manager/app-manager-delete-from-main.jpg" class="centered" style="max-width: 800px">
 
     <p>
-    ... or by using the button on the right bar when on the application page:
+    ... или по аналогичной на странице приложения.
     </p>
 
     <img src="files/app-manager/app-manager-delete-from-app-page.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    The application is moved to the system Trash from which it is possible to restore it.
+    Приложение будет удалено в Корзину с возможностью ее восстановления.
     </p>
 
 
 
-    <h2>Got Questions?</h2>
+    <h2>Все еще есть вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задавайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
