--- a/manual/ru/introduction/Workflow.html
+++ b/manual/ru/introduction/Workflow.html
@@ -166,7 +166,7 @@
     <img src="files/workflow/animation.png" class="centered" style="max-width: 819px;">
 
     <p>
-      Давайте понятные названия анимированным объектам, что поможет легко их искать в <a href="manual/ru/puzzles/Animation.html">редакторе Пазлов</a>.
+      Давайте понятные названия анимированным объектам, что поможет легко их искать в <a href="manual/ru/puzzles/Animation.html">редакторе пазлов</a>.
     </p>
 
     <img src="files/workflow/advanced_animation_puzzle.jpg" class="centered" style="max-width: 819px;">
@@ -253,7 +253,7 @@
     <h2>Публикация</h2>
 
     <p>
-      Вы можете опубликовать свой проект, изучив руководство по <a href="manual/ru/introduction/App-Manager.html#Publish">Менеджеру проектов.</a>
+      Вы можете опубликовать свой проект, изучив руководство по <a href="manual/ru/introduction/App-Manager.html#Publish">App Manager (менеджер проектов).</a>
     </p>
 
 
