Перевод manual/ru/blender/Installation

--- a/manual/ru/blender/Installation.html
+++ b/manual/ru/blender/Installation.html
@@ -1,78 +1,78 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for Blender: Installation - Soft8Soft</title>
+    <title>Verge3D для Blender: Установка - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="This page describes the installation procedure for Blender version of Verge3D."/>
+    <meta name="description" content="Информация об установке Blender для Verge3D."/>
     <base href="../../../" />
     <script src="list.js"></script>
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>Installation / Blender</h1>
+    <h1>Установка / Blender</h1>
 
     [contents]
 
 
     [anchor:Prerequisites]
 
-    <h2>Prerequisites</h2>
+    <h2>Предпосылки</h2>
 
     <p>
-      Verge3D can run on top of Blender, an open source 3D modeling and animation suite, which should be installed first (we support versions 2.80-2.83). You can download Blender for free from the <a href="https://www.blender.org/download/" target="_blank">official website</a>.
+      Verge3D может работать поверх Blender, пакета 3D-моделирования и анимации с открытым исходным кодом, который необходимо установить первым (мы поддерживаем версии 2.80–2.83). Вы можете бесплатно загрузить Blender с <a href="https://www.blender.org/download/" target="_blank"> официального сайта </a>.
     </p>
 
 
     [anchor:Downloading_Verge3D]
 
-    <h2>Downloading Verge3D</h2>
+    <h2>Загрузка Verge3D</h2>
 
     <p>
-      Download <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">Verge3D for Blender</a> for your operating system (.exe installer for Windows, or XZ archive for macOS or Linux).
+      Загрузите <a href="https://www.soft8soft.com/get-verge3d/" target="_blank"> Verge3D для Blender </a> для своей операционной системы (установщик .exe для Windows или архив XZ для macOS/Linux).
     </p>
 
 
     [anchor:Installation_for_Windows]
 
-    <h2>Installation for Windows</h2>
+    <h2>Установка для Windows</h2>
 
     <p>
-      Double click on the <strong>.exe</strong> file to run the installer.
+      Дважды щелкните файл <strong> .exe </strong>, чтобы запустить установщик.
     </p>
 
     <img src="files/installation-blender/windows-installer.jpg" class="centered" style="max-width: 499px">
 
     <p>
-      There is a known issue on Win 10 when Windows Defender may refuse to run the installer (we are working on it). If you see a blue warning window like on the picture below, click the *More info* link:
+      В Win 10 существует известная проблема, когда Windows Defender может отказать в запуске установщика (мы работаем над этим). Если вы видите синее окно с предупреждением, как на картинке ниже, нажмите ссылку *More info*:
     </p>
 
     <img src="files/installation-blender/windows-installer-warning.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-      and then press the *Run anyway* button:
+      и затем нажмите кнопку *Run anyway*:
     </p>
 
     <img src="files/installation-blender/windows-installer-warning2.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-      Choose an installation folder that have enough permissions for reading and writing (or better leave it by default). Installing in a system directory such as "Program Files" or "Desktop" is not recommended.
+      Выберите папку для установки (или лучше оставьте ее по умолчанию). Убедитесь, что у вас достаточно разрешений на чтение и запись для этой папки. Установка в системный каталог, такой как «Program Files» или «Desktop», не рекомендуется.
     </p>
 
     <img src="files/installation-blender/windows-installer2.jpg" class="centered" style="max-width: 499px">
 
     <p>
-      Once the installation is complete, you may open Blender. If you had it running, be sure to close and open it again.
+      После завершения установки вы можете открыть Blender. Если он у вас запущен, обязательно закройте и снова откройте.
     </p>
 
     <p>
-      Open the *Preferences* window and go to the *Add-ons* tab. Find and enable the Verge3D addon, then click *Save Preferences* and close the window.
+      Откройте окно *Preferences* и перейдите на вкладку *Add-ons*. Найдите и включите надстройку Verge3D, затем нажмите *Save Preferences* и закройте окно.
     </p>
 
     <img src="files/installation-blender/installation_blender280_step3.jpg" class="centered" style="max-width: 660px">
 
     <p>
-      As of version 2.17, you may also launch the App Manager without running Blender by clicking on the desktop icon or using the Start menu.
+      Начиная с версии 2.17, вы также можете запустить менеджер приложений без запуска Blender, щелкнув значок на рабочем столе или используя меню «Пуск».
     </p>
 
     <img src="files/installation-blender/desktop-shortcuts.jpg" class="centered" style="max-width: 1000px">
@@ -80,43 +80,43 @@
 
     [anchor:Installation_for_macOS_or_Linux]
 
-    <h2>Installation for macOS or Linux</h2>
+    <h2>Установка для macOS или Linux</h2>
 
     <p>
-    Unpack the XZ archive to a directory of your choice. Make sure you have enough permissions to read/write in this folder. Installing in a system directory is not recommended.
+      Распакуйте архив XZ в каталог по вашему выбору. Убедитесь, что у вас достаточно разрешений на чтение и запись в этой папке. Не рекомендуется устанавливать в системный каталог.
     </p>
 
     <p>
-      In Blender, invoke the *Preferences* window by selecting the corresponding option in the *Edit* menu.
+      В Blender вызовите окно *Preferences*, выбрав соответствующую опцию в меню *Edit*.
     </p>
 
     <img src="files/installation-blender/installation_blender280_step1.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-      On the *File Paths* tab, find the *Scripts* field and make it point to the folder in which Verge3D is installed. Close the *Preferences* window and <i>restart Blender</i>.
+      На вкладке *File Paths* найдите поле *Scripts* и укажите в нем папку, в которой установлен Verge3D. Закройте окно *Preferences* и <i> перезапустите Blender </i>.
     </p>
 
     <img src="files/installation-blender/installation_blender280_step2.jpg" class="centered" style="max-width: 660px">
 
     <p>
-      Open the *Preferences* window again and go to the *Add-ons* tab. Find and enable the Verge3D addon, then click *Save Preferences* and close the window.
+      Снова откройте окно *Preferences* и перейдите на вкладку *Add-ons*. Найдите и включите надстройку Verge3D, затем нажмите *Save Preferences* и закройте окно.
     </p>
 
     <img src="files/installation-blender/installation_blender280_step3.jpg" class="centered" style="max-width: 660px">
 
     <p>
-      Installation complete!
+      Установка завершена!
     </p>
 
-    <h2>What's Next</h2>
+    <h2>Что дальше</h2>
 
     <p>
-    Familiarize yourself with the <a href="manual/ru/blender/Beginners-Guide.html">basics</a>!
+      Ознакомьтесь с <a href="manual/ru/blender/Beginners-Guide.html"> основами </a>!
     </p>
 
-    <h2>Got Questions?</h2>
+    <h2>Все еще есть вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задавайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
